fix: image not centered error

--- a/src/components/events/eventCards/eventCard.scss
+++ b/src/components/events/eventCards/eventCard.scss
@@ -18,9 +18,10 @@
 .event-card-img-top {
     width: 100%;
     /* height: 300px; */
-    margin-top: 10px;
-    margin-left: 30px;
-
+    // margin-top: 10px;
+    margin-left: auto;   // center horizontally
+    margin-right: auto;  // center horizontally
+    display: block;
     border-radius: 5px 5px 0 0;
     /* Rounded corners at the top */
 }
@@ -80,10 +81,15 @@
 }
 
 .event-card .event-card-img-top {
-    width: calc(100% - 60px);
+    width: 100%;
     position: relative;
     z-index: 1;
     transition: transform 0.5s ease;
+    margin-left: auto;   // center horizontally
+    margin-right: auto;  // center horizontally
+    margin-top: auto;
+    margin-bottom: auto;
+    display: block;
 }
 
 .event-card .body {
@@ -135,5 +141,12 @@
         padding: 15px 32px;
         font-size: 14px;
         margin-top: 20px;
+    }
+
+    .event-card .event-card-img-top {
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
     }
 }
